--- a/php/Tarifas/css/style.css
+++ b/php/Tarifas/css/style.css
@@ -1,3 +1,5 @@
+@import url(../../../css/header.css);
+@import url(../../../css/aside.css);
 #contenido {
     display: flex;
     justify-content: space-between;
