--- a/css/header.css
+++ b/css/header.css
@@ -130,21 +130,26 @@ header {
 
 
 
-/* Estilos del contenedor de notificaciones */
+/* Contenedor de notificaciones con animación */
 .notifications-dropdown {
-    display: none; /* Por defecto oculto */
-    top: 100%; 
-    right: 0; 
-    width: 250px; /* Tamaño adecuado para la bandeja de notificaciones */
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1000; /* Para que flote sobre otros elementos */
-    padding: 10px;
-    box-sizing: border-box;
+    display: none;
+    background-color: #212121;
+    color: #dad6d6;
+    border-radius: 10px;
+    margin-top: 8px;
+    padding: 8px;
+    box-shadow: 0px 8px 16px rgba(34, 124, 112, 0.2);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease, padding 0.5s ease;
 }
 
-/* Estilos de la lista de notificaciones */
+.notifications-dropdown.active {
+    display: block;
+    max-height: 300px; /* Altura máxima ajustada */
+    padding: 8px 12px;
+}
+
 .sub-notifications-list {
     list-style: none;
     padding: 0;
@@ -153,14 +158,14 @@ header {
 
 .sub-notifications-list li {
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #343434;
+    color: #dad6d6;
 }
 
 .sub-notifications-list li:last-child {
     border-bottom: none;
 }
 
-/* Mostrar el dropdown de notificaciones cuando esté activo */
-.notifications-dropdown.active {
-    display: block;
+.profile-dropdown-list-item a i#notificacion-icon {
+    color: darkcyan;
 }
