--- a/php/reservas/mis_reservas/css/tabla_socio.css
+++ b/php/reservas/mis_reservas/css/tabla_socio.css
@@ -1,5 +1,3 @@
-@import url(/../../../../css/header.css);
-@import url(/../../../../css/aside.css);
 
 body {
     background: #f3f3f3; /* Fondo blanco limpio */
@@ -53,7 +51,6 @@ body {
 }
 
 .containerEmpleado button {
-    width: 40%;
     padding: 12px;
     background-color: #009879; /* Verde deportivo */
     color: #ffffff;
@@ -205,6 +202,11 @@ tbody a:hover {
 
 }
 
+
+.ver_mas {
+    cursor:pointer;
+}
+
 td accion:hover {
     cursor:pointer;
 }
@@ -228,7 +230,7 @@ td img {
     cursor:pointer;
 }
 
-.custom-swal-popup {
-    border-left: 5px solid #28a745; /* Borde verde en el lado izquierdo */
-    padding-left: 15px; /* Un pequeño espacio para el texto */
+.datos_adicionales {
+    text-align: left;
+    margin-left: 20%;
 }
